--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,8 @@
     padding: 5px;
     background: black;
     border: 1px solid #353b51;
-    width: 90%;
+    width: 320px;
+    height: 600px;
     margin: auto;
 }
 
@@ -18,6 +19,10 @@
     color: lightgreen;
     margin: 10px auto;
     text-align: center;
+}
+
+.displayArea span  {
+    width: 45%;
 }
 
 #displayInput {
