--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
 }
 
 .game h1 {
-    font-family: 7_segment;
+    font-family: 7seg;
     color: red;
     text-align: center;
     margin: 10px auto;
