--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,3 +86,13 @@ ol {
     width: 100px;
 
   }
+
+  button {
+    margin-top: 120px;
+    width: 90px;
+    font-size: 20px;
+    background-color: lightgrey;
+    border: 1px transparent;
+    border-radius: 10px;
+    display:inline-block;
+}
