--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,12 +40,26 @@ input {
     width: 45%;
 }
 
+.displayGuessArea {
+    margin: 0 10%;
+}
+
+.displayResultArea {
+    margin: 0 10%;
+}
 .displayInput {
-    width: 35px;
+    width: 40px;
+    margin: 0 5px;
     padding: 0;
     text-align: center;
 }
 
+.displayResult {
+    width: 40px;
+    margin: 0 5px;
+    padding: 0;
+    text-align: center;
+}
 ol {
     display: block;
     list-style-type: decimal;
@@ -57,6 +71,7 @@ ol {
 }
 
 .keypad {
+    margin-top: 10px;
     display: inline-block;
     border-radius: 10px;
     padding: 5px;
@@ -82,6 +97,7 @@ ol {
   }
   
   .oldGuessDispaly {
+    margin-top: 10px;
     display: inline-block;
     position: absolute;
     border-radius: 10px;
