--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,26 +15,32 @@
 
 
 
-.game h1 {
+#title {
     font-family: 7seg;
     color: red;
     text-align: center;
-    margin: 10px auto;
-    font-size: 200%;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    font-size: 250%;
 }
 
-#level {
-    color: lightgreen;
-    margin: 10px auto;
-    text-align: center;
-    font-size: 200%;
+#levelDispaly {
+    color: lightgreen;    
 }
 
-#triesLeft {
+#triesLeftDisplay, #triesLeftText{
     color: lightblue;
-    margin: 10px auto;
-    text-align: center;
-    font-size: 200%;
+}
+
+.header {
+    display: inline-flex;    
+}
+
+.header p{
+    text-align: left;
+    font-size: 150%;
+    width: 125px;
+    margin: 5px 0;
 }
 
 input {
@@ -112,23 +118,29 @@ ol {
     display: inline-block;
     position: absolute;
     border-radius: 10px;
-    padding: 5px;
+    padding: 10px;
     font-size: 15px;
     background: black;
-    border: 1px solid #353b5e;
-    width: 100px;
   }
 
   button {
-    margin-top: 120px;
+    margin-top: 10px;
     width: 90px;
+    height: 45px;
     font-size: 20px;
     background-color: lightgrey;
     border: 1px transparent;
     border-radius: 10px;
-    display:inline-block;
+    display:inline-flex;
+    text-align: center;
+    vertical-align: auto;
 }
 
 .material-icons {
     font-size: 28px;
+}
+
+.buttonsContainer {
+    width: 60%;
+
 }
