--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
-@font-face {
-    font-family: 7seg;
-    src: url(../fonts/7Segment.ttf);
+#imageComtainer {
+    width: 250px;
+    height: 110px;
+    margin: 20px auto;
 }
 
 .game {
@@ -8,47 +9,28 @@
     padding: 5px;
     background: black;
     border: 1px solid #353b51;
-    width: 320px;
-    height: 600px;
+    width: 800px;
+    height: 100%;
     margin: auto;
 }
 
-
-
-#title {
-    font-family: 7seg;
-    color: red;
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 5px;
-    font-size: 250%;
-}
-
-#levelDispaly {
-    color: lightgreen;    
-}
-
-#triesLeftDisplay, #triesLeftText{
+#triesLeftDisplay,
+#triesLeftText {
     color: lightblue;
 }
 
 .header {
-    display: inline-flex;    
-}
-
-.header p{
-    text-align: left;
-    font-size: 150%;
-    width: 125px;
-    margin: 5px 0;
+    text-align: center;
+    font-size: 300%;
+    width: 90%;
+    margin: 10px 0;
 }
 
 input {
-    font-family: 7seg;
     color: red;
     border-radius: 10px;
     padding: 5px;
-    background: blueviolet;
+    background: slategray;
     border: 1px solid #353b51;
     text-align: right;
     margin: 10px auto;
@@ -63,6 +45,7 @@ input {
 .displayResultArea {
     margin: 0 10%;
 }
+
 .displayInput {
     width: 40px;
     margin: 0 5px;
@@ -76,6 +59,7 @@ input {
     padding: 0;
     text-align: center;
 }
+
 ol {
     display: block;
     list-style-type: decimal;
@@ -93,27 +77,27 @@ ol {
     border-radius: 10px;
     padding: 5px;
     font-size: 28px;
-    background: #d9deff;
-    border: 1px solid #353b5e;
-    width: 60%;
-} 
+    background: slategrey;
+    border: 1px solid gray;
+    width: 55%;
+}
 
 .inputKey {
     width: 50px;
     height: 50px;
     margin: 2px;
-    background: rgba(0, 0, 0, 0.15);
-    box-shadow: 3px 3px grey;
-    color: #363b5e;
+    background: midnightblue;
+    box-shadow: 3px 3px slategrey;
+    color: greenyellow;
     border-radius: 10px;
     display: inline-flex;
     align-items: center;
     justify-content: center;
     font-weight: bold;
     cursor: pointer;
-  }
-  
-  .oldGuessDispaly {
+}
+
+.oldGuessDispaly {
     margin-top: 10px;
     display: inline-block;
     position: absolute;
@@ -121,9 +105,16 @@ ol {
     padding: 10px;
     font-size: 15px;
     background: black;
-  }
+}
 
-  button {
+.oldGuessDispaly p {
+    color: white;
+    margin: 0;
+    margin-block-start: 0;
+    margin-block-end: 0.25em;
+}
+
+button {
     margin-top: 10px;
     width: 90px;
     height: 45px;
@@ -131,7 +122,7 @@ ol {
     background-color: lightgrey;
     border: 1px transparent;
     border-radius: 10px;
-    display:inline-flex;
+    display: inline-flex;
     text-align: center;
 }
 
@@ -141,5 +132,90 @@ ol {
 
 .buttonsContainer {
     width: 60%;
+}
+
+#story,
+#rules {
+    color: white;
+    font-size: 120%;
+    padding: 20px;
+}
+
+/* for laptop screens size from 780px wide and down */
+
+@media screen and (max-width: 1280px) {
+    .game {
+        padding: 15px;
+        width: 640px;
+        height: 100%;
+        margin: auto;
+    }
+
+    .inputKey {
+        width: 70px;
+        height: 70px;
+        margin: 5px;
+    }
+
+
+
+
+
+
+}
+
+/* for tablet screens size from 780px wide and down */
+
+@media screen and (max-width: 780px) {
+    .game {
+        padding: 15px;
+        width: 480px;
+        height: 100%;
+        margin: auto;
+    }
+
+    input {
+        margin: 5px auto;
+        font-size: 50px;
+        width: 45%;
+    }
+
+    .inputKey {
+        width: 70px;
+        height: 70px;
+        margin: 5px;
+    }
+}
+
+/* for phone screens size from 360px wide and down */
+
+@media screen and (max-width: 360px) {
+
+    #imageComtainer {
+        margin: 5px auto;
+    }
+
+    input {
+        margin: 5px auto;
+        font-size: 40px;
+        width: 45%;
+    }
+
+    .inputKey {
+        width: 40px;
+        height: 40px;
+    }
+
+    button {
+        height: 25px;
+    }
+
+    .header p {
+        text-align: left;
+        font-size: 120%;
+        width: 125px;
+        margin: 5px 0;
+    }
+
 
 }
